Fix image overflow and overlay

--- a/sixthWebsite/styles/styles.css
+++ b/sixthWebsite/styles/styles.css
@@ -6,38 +6,43 @@ body {
   color: #000;
 }
 
-a {
-  text-decoration: none;
-}
-
 header {
   background-color: #000;
   color: #f4f4f4;
-  border-top: 4px solid #feea34;
+  border-top: 5px solid #feea34;
 }
 
+/* We apply our flex styles to the inner container rather than 
+the outer header element */
 header .container {
   justify-content: space-between;
   display: flex;
   align-items: center;
 }
 
-header nav a {
-  display: block;
-}
-
-.container {
-  max-width: 960px;
-  margin: 0 auto 0 auto;
-  padding: 0 20px;
-}
 
 header h1 {
   width: 75px;
 }
 
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 header nav {
   display: flex;
+}
+
+header nav a {
+  display: block;
 }
 
 .hero {
@@ -49,10 +54,6 @@ header nav {
   margin-bottom: 30px;
 }
 
-.intro {
-  max-width: 480px;
-}
-
 .hero h2 {
   font-size: 36px;
   font-weight: 700;
@@ -61,6 +62,10 @@ header nav {
 .hero p {
   font-size: 24px;
   margin: 20px 0 0 0;
+}
+
+.intro {
+  max-width: 420px;
 }
 
 .filters {
@@ -80,20 +85,36 @@ header nav {
   padding-bottom: 1px;
 }
 
-.products {
+
+/* .products {
   margin-bottom: 40px;
-}
+} */
 
 .products .container {
   display: flex;
   flex-wrap: wrap;
 }
-
 .product {
   width: 33.333%;
+  /* This supports the overlay class to not use the full width/height of the page */
   position: relative;
 }
 
+.product img {
+  width: 100%;
+}
+
 .overlay {
-  display: none;
+  opacity: 0;
+  position: absolute;
+  background-color: rgba(254, 234, 52, 0.7);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding: 15px;
+}
+
+.product:hover .overlay {
+  opacity: 1;
 }
